breadcrumbs and fonts

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-// @import "fonts";
+@import "fonts";
 @import "vars";
 @import "reset";
 @import "global";
@@ -9,6 +9,7 @@
 @import "hero";
 @import "catalog";
 @import "popup";
+@import "breadcrumbs";
 
 
 @import "../libs/swiper/swiper";
