--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -17,6 +17,7 @@ $colorWhite: #FFFFFF;
 $colorBlack: #000000;
 $colorGreen: #40C3A8;
 $colorText: #1A1A1A;
+$colorBackground: #F4F2F1;
 
 // Fonts
 $fontPrimary: "Lato", sans-serif;
