--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -29,93 +29,63 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @media screen and (max-width: $burgerBreakpoint) {
+            position: relative;
+            padding-top: 32px;
+        }
     }
 
     // .popup__close
     &__close {
         align-self: flex-end;
         cursor: pointer;
+
+        @media screen and (max-width: $burgerBreakpoint) {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
     }
 
     // .popup__title
     &__title {
         margin-top: 10px;
-        font-size: clamp(20px, 4vw, 40px);
+        font-size: 22px;
+        font-weight: 400;
+        text-transform: uppercase;
     }
 
     // .popup__inputs
     &__inputs {
-        margin-top: 50px;
+        margin-top: clamp(24px, 4vw, 40px);
         max-width: 600px;
         width: 100%;
 
         display: flex;
         flex-direction: column;
-        gap: 24px;
+        gap: 8px;
     }
 
     // .popup__input
     &__input {
-        text-align: left;
-        padding: 16px;
-        width: 100%;
         max-width: 600px;
-        color: $colorBlack;
-        background: #F2F2F2;
-        border-radius: 6px;
-
-        &::placeholder {
-            color: #666;
-        }
-
-        &:not(:placeholder-shown) {
-            border-color: $colorBlack;
-        }
     }
 
     // .popup__confirm
     &__confirm {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        cursor: pointer;
-
-        
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 100%;
-        letter-spacing: 0.2px;
-
-        input {
-            width: 20px;
-            height: 20px;
-
-            -webkit-appearance: none;
-            appearance: none;
-            border: 1px solid #d5d5d5;
-            border-radius: 2px;
-            
-            position: relative;
-            
-            &:checked {
-
-                &::after {
-                    content: '';
-                    position: absolute;
-                    top: 2px; bottom: 2px;
-                    left: 2px; right: 2px;
-                    background: $colorGreen;
-                }
-            }
-        }
-
+        margin-top: 16px;
     }
     
     // .popup__btn
     &__btn {
-        margin-top: 50px;
+        margin-top: clamp(24px, 4vw, 40px);
         max-width: fit-content;
+
+        @media screen and (max-width: $breakpoint576) {
+            max-width: 100%;
+            width: 100%;
+        }
     }
 }
 
