--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -112,9 +112,9 @@
             padding: 0;
             // position: absolute;
             margin-top: 6px;
-            z-index: 1;
-            left: 0;
-            top: calc(100% + 6px);
+            // z-index: 1;
+            // left: 0;
+            // top: calc(100% + 6px);
             text-transform: none;
         }
     }
