--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -17,13 +17,13 @@
     min-height: $headerHeight;
     color: $colorWhite;
 
-    font-size: clamp(14px, 0.1vw, 16px);
+    font-size: clamp(14px, 1.5vw, 16px);
 
     // .header__inner
     &__inner {
         display: flex;
         flex-direction: column;
-        gap: 16px;
+        gap: 12px;
         position: relative;
 
         &_scrolled {
@@ -184,7 +184,7 @@
 
         border-radius: 8px;
         background: $colorGreen;
-        padding: 16px 32px;
+        padding: 10px 28px;
     }
 
     // .header__title
@@ -192,7 +192,6 @@
         line-height: 1.75;
         text-transform: uppercase;
         font-weight: 700;
-
     }
 
     // .header__schedule
@@ -393,7 +392,7 @@
         text-align: center;
         font-size: 17px;
         line-height: 1.5;
-        font-weight: 700;
+        font-weight: 600;
         text-transform: uppercase;
         text-wrap: nowrap;
 
@@ -429,7 +428,7 @@
         }
 
         display: flex;
-        align-items: flex-start;
+        // align-items: flex-start;
         gap: 24px;
     }
 
@@ -444,14 +443,14 @@
     &__droplist-link {
         color: #333333;
         font-size: 16px;
-        line-height: 1.125;
+        line-height: 1.5;
         text-wrap: nowrap;
     }
 
     // .header__droplist-img
     &__droplist-img {
         width: 156px;
-        aspect-ratio: 156 / 148;
+        // aspect-ratio: 156 / 148;
         border-radius: 8px;
         background: #BABABA;
         overflow: hidden;
@@ -459,7 +458,7 @@
         img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
         }
     }
 
