--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -287,7 +287,7 @@ textarea {
     column-gap: 8px;
 
     & > * {
-        flex: 0 0 calc(50% - 8px / 2);
+        flex: 1 0 calc(50% - 8px / 2);
 
         @media screen and (max-width: $breakpoint576) {
             flex: 0 0 100%;
@@ -313,6 +313,8 @@ textarea {
     font-size: 12px;
     line-height: 1.33;
     color: $colorText;
+
+    max-width: 320px;
 
     &_checked {
         background: #D9F2ED;
