--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -443,8 +443,10 @@
     &__droplist-link {
         color: #333333;
         font-size: 16px;
-        line-height: 1.5;
+        line-height: 1.125;
         text-wrap: nowrap;
+        padding: 3px 0;
+        display: block;
     }
 
     // .header__droplist-img
