--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -509,7 +509,7 @@
         position: absolute;
         z-index: $headerLayer;
         top: -12px;
-        left: 0;
+        left: -20px;
     
         background: $colorWhite;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
