--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -1,6 +1,6 @@
 .catalog {
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: clamp(35px, 6vw, 60px);
+    margin-bottom: clamp(35px, 6vw, 60px);
 }
 .catalog-grid {
 
@@ -10,7 +10,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
 
     @media screen and (max-width: $breakpoint768) {
-        row-gap: 34px;
+        row-gap: clamp(14px, 3vw, 34px);
         grid-template-columns: 1fr 1fr;
         grid-auto-rows: unset;
         align-items: self-start;
