--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -518,7 +518,7 @@
 
         position: absolute;
         z-index: $headerLayer;
-        top: -12px;
+        top: 0;
         left: -20px;
     
         background: $colorWhite;
