--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -223,6 +223,7 @@
         font-size: clamp(13px, 2vw, 22px);
         line-height: 1.25;
         font-weight: 600;
+        font-family: "Montserrat";
 
         span {
             color: var(--highlight);
