--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -54,6 +54,11 @@
         font-size: 22px;
         font-weight: 400;
         text-transform: uppercase;
+
+        &_left {
+            text-align: left;
+            align-self: flex-start;
+        }
     }
 
     // .popup__inputs
@@ -81,6 +86,8 @@
     &__btn {
         margin-top: clamp(24px, 4vw, 40px);
         max-width: fit-content;
+        font-size: 16px;
+        font-weight: 500;
 
         @media screen and (max-width: $breakpoint576) {
             max-width: 100%;
