--- a/src/scss/tel-input.scss
+++ b/src/scss/tel-input.scss
@@ -33,6 +33,7 @@
             width: 32px;
             height: auto;
             display: block;
+            user-select: none;
         }
 
         svg {
