--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -19,6 +19,13 @@
 
     font-size: clamp(14px, 1.5vw, 16px);
 
+    &_s {
+        @media screen and (min-width: $burgerBreakpoint) {
+            transition: none;
+            min-height: 85px;
+        }
+    }
+
     // .header__inner
     &__inner {
         display: flex;
@@ -26,7 +33,7 @@
         gap: 12px;
         position: relative;
 
-        &_scrolled {
+        &_m {
             .header__row {
                 &:nth-child(2) {
                     opacity: 0;
@@ -44,6 +51,15 @@
                         filter: invert(1);
                         -webkit-filter: invert(1);
                     }
+                }
+            }
+        }
+
+        &_s {
+            .header__row {
+                &:nth-child(2),
+                &:nth-child(3) {
+                    display: none;
                 }
             }
         }
